Refactored and neatend up the code and added a UI tickbox for if the mass spring object should be textured.

--- a/Masters_Project_Silk_Torch/ui/MainWindow.ui
+++ b/Masters_Project_Silk_Torch/ui/MainWindow.ui
@@ -60,10 +60,20 @@
        <string>Draw</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
+       <item row="1" column="0">
         <widget class="QCheckBox" name="m_wireframe">
          <property name="text">
           <string>WireFrame</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QCheckBox" name="m_textured">
+         <property name="text">
+          <string>Textured</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
