--- a/Masters_Project_Silk_Torch/ui/MainWindow.ui
+++ b/Masters_Project_Silk_Torch/ui/MainWindow.ui
@@ -21,6 +21,13 @@
        <string>Project</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
+       <item row="1" column="0">
+        <widget class="QLabel" name="fpslabel">
+         <property name="text">
+          <string>FPS</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QPushButton" name="m_runProject">
          <property name="text">
@@ -34,6 +41,9 @@
           <string>Restart</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLCDNumber" name="lcdNumber"/>
        </item>
       </layout>
      </widget>
@@ -91,7 +101,7 @@
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
-        <height>31</height>
+        <height>64</height>
        </size>
       </property>
      </spacer>
@@ -104,7 +114,7 @@
      <x>0</x>
      <y>0</y>
      <width>1058</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
