--- a/Masters_Project_Silk_Torch/ui/MainWindow.ui
+++ b/Masters_Project_Silk_Torch/ui/MainWindow.ui
@@ -118,6 +118,9 @@
            <height>29</height>
           </rect>
          </property>
+         <property name="minimum">
+          <double>-99.989999999999995</double>
+         </property>
          <property name="value">
           <double>5.000000000000000</double>
          </property>
@@ -135,24 +138,11 @@
           <string>Flame Buoyancy</string>
          </property>
         </widget>
-        <widget class="QDoubleSpinBox" name="m_windImpulseOn">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>100</y>
-           <width>72</width>
-           <height>29</height>
-          </rect>
-         </property>
-         <property name="value">
-          <double>1.000000000000000</double>
-         </property>
-        </widget>
         <widget class="QLabel" name="l_windImpulseOn">
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>80</y>
+           <y>70</y>
            <width>131</width>
            <height>20</height>
           </rect>
@@ -161,50 +151,11 @@
           <string>Wind Impulse (On)</string>
          </property>
         </widget>
-        <widget class="QLabel" name="l_seconds">
-         <property name="geometry">
-          <rect>
-           <x>90</x>
-           <y>110</y>
-           <width>62</width>
-           <height>20</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Seconds</string>
-         </property>
-        </widget>
-        <widget class="QDoubleSpinBox" name="m_windImpulseOff">
-         <property name="geometry">
-          <rect>
-           <x>170</x>
-           <y>100</y>
-           <width>72</width>
-           <height>29</height>
-          </rect>
-         </property>
-         <property name="value">
-          <double>5.000000000000000</double>
-         </property>
-        </widget>
-        <widget class="QLabel" name="l_seconds_2">
-         <property name="geometry">
-          <rect>
-           <x>250</x>
-           <y>110</y>
-           <width>62</width>
-           <height>20</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Seconds</string>
-         </property>
-        </widget>
         <widget class="QLabel" name="l_windImpulseOff">
          <property name="geometry">
           <rect>
-           <x>170</x>
-           <y>80</y>
+           <x>160</x>
+           <y>70</y>
            <width>131</width>
            <height>20</height>
           </rect>
@@ -213,24 +164,11 @@
           <string>Wind Impulse (Off)</string>
          </property>
         </widget>
-        <widget class="QDoubleSpinBox" name="m_windForceX">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>170</y>
-           <width>72</width>
-           <height>29</height>
-          </rect>
-         </property>
-         <property name="value">
-          <double>0.000000000000000</double>
-         </property>
-        </widget>
         <widget class="QLabel" name="l_windForce">
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>150</y>
+           <y>140</y>
            <width>101</width>
            <height>20</height>
           </rect>
@@ -239,79 +177,254 @@
           <string>Wind Force</string>
          </property>
         </widget>
-        <widget class="QDoubleSpinBox" name="m_windForceY">
+        <widget class="QWidget" name="horizontalLayoutWidget_5">
          <property name="geometry">
           <rect>
-           <x>120</x>
-           <y>170</y>
-           <width>72</width>
-           <height>29</height>
+           <x>10</x>
+           <y>160</y>
+           <width>301</width>
+           <height>57</height>
           </rect>
          </property>
-         <property name="value">
-          <double>0.000000000000000</double>
-         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
+          <item>
+           <widget class="QDoubleSpinBox" name="m_windForceX">
+            <property name="minimum">
+             <double>-99.989999999999995</double>
+            </property>
+            <property name="value">
+             <double>0.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="l_x">
+            <property name="text">
+             <string>X</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="m_windForceY">
+            <property name="minimum">
+             <double>-99.989999999999995</double>
+            </property>
+            <property name="value">
+             <double>0.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="l_y">
+            <property name="text">
+             <string>Y</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="m_windForceZ">
+            <property name="minimum">
+             <double>-99.989999999999995</double>
+            </property>
+            <property name="value">
+             <double>-5.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="l_z">
+            <property name="text">
+             <string>Z</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
-        <widget class="QDoubleSpinBox" name="m_windForceZ">
+        <widget class="QWidget" name="horizontalLayoutWidget_6">
          <property name="geometry">
           <rect>
-           <x>220</x>
-           <y>170</y>
-           <width>72</width>
-           <height>29</height>
+           <x>160</x>
+           <y>90</y>
+           <width>151</width>
+           <height>41</height>
           </rect>
          </property>
-         <property name="minimum">
-          <double>-99.989999999999995</double>
-         </property>
-         <property name="value">
-          <double>-5.000000000000000</double>
-         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_7">
+          <item>
+           <widget class="QDoubleSpinBox" name="m_windImpulseOff">
+            <property name="value">
+             <double>5.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="l_seconds_2">
+            <property name="text">
+             <string>Seconds</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
-        <widget class="QLabel" name="l_x">
+        <widget class="QWidget" name="horizontalLayoutWidget_7">
          <property name="geometry">
           <rect>
-           <x>90</x>
-           <y>180</y>
-           <width>21</width>
-           <height>20</height>
+           <x>10</x>
+           <y>90</y>
+           <width>151</width>
+           <height>41</height>
           </rect>
          </property>
-         <property name="text">
-          <string>X</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="l_y">
-         <property name="geometry">
-          <rect>
-           <x>200</x>
-           <y>180</y>
-           <width>21</width>
-           <height>20</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Y</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="l_z">
-         <property name="geometry">
-          <rect>
-           <x>300</x>
-           <y>180</y>
-           <width>21</width>
-           <height>20</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Z</string>
-         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_8">
+          <item>
+           <widget class="QDoubleSpinBox" name="m_windImpulseOn">
+            <property name="value">
+             <double>1.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="l_seconds">
+            <property name="text">
+             <string>Seconds</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </widget>
        <widget class="QWidget" name="t_internal">
         <attribute name="title">
          <string>Internal</string>
         </attribute>
+        <widget class="QWidget" name="horizontalLayoutWidget">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>20</y>
+           <width>301</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QLabel" name="l_mass">
+            <property name="text">
+             <string>Mass</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="m_mass">
+            <property name="maximum">
+             <double>999.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>10.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="horizontalLayoutWidget_2">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>70</y>
+           <width>301</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLabel" name="l_damper">
+            <property name="text">
+             <string>Damper</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="m_damping">
+            <property name="maximum">
+             <double>999.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>0.100000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="horizontalLayoutWidget_3">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>120</y>
+           <width>301</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLabel" name="l_restLength">
+            <property name="text">
+             <string>Rest Length</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="m_restLength">
+            <property name="maximum">
+             <double>999.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>1.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="horizontalLayoutWidget_4">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>170</y>
+           <width>301</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QLabel" name="l_springConstant">
+            <property name="text">
+             <string>Spring Constant</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="m_springConstant">
+            <property name="maximum">
+             <double>999.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>100.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </widget>
       </widget>
      </widget>
